--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 language: node_js
 node_js:
-  - 10.15.0
+  - node
+
 before_install:
-  - stty columns 120
+  - yarn add danger
+
 script:
-  - git remote set-branches --add origin $TRAVIS_BRANCH
-  - git fetch
-  - git status
-  - echo $TRAVIS_COMMIT_RANGE
-  - echo $TRAVIS_BRANCH
-  - echo $TRAVIS_COMMIT
-  - node .travis.js
+- yarn danger ci
